--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Firebase configuration - replace with your own values from Firebase console
-VITE_FB_API_KEY="your-api-key"
-VITE_FB_AUTH_DOMAIN="your-auth-domain"
-VITE_FB_PROJECT_ID="your-project-id"
-VITE_FB_APP_ID="your-app-id"
-VITE_FB_MESSAGING_SENDER_ID="your-messaging-sender-id"
-VITE_FB_STORAGE_BUCKET="your-storage-bucket"
+VITE_FB_API_KEY="***REMOVED***"
+VITE_FB_AUTH_DOMAIN="hw3-484-c112b.firebaseapp.com"
+VITE_FB_PROJECT_ID="hw3-484-c112b"
+VITE_FB_APP_ID="1:409270792991:web:8d1ec0a8e4617a2483762a"
+VITE_FB_MESSAGING_SENDER_ID="409270792991"
+VITE_FB_STORAGE_BUCKET="hw3-484-c112b.firebasestorage.app"
 VITE_FB_USE_EMULATORS="1" # Set to "1" to use emulators, "0" or unset to use production
